tests/sources/invalid/functions/function_def_syntax_errors.fire
// Malformed function definitions: return type, params, body errors.

// Unclosed '[' in array return type
fn badRet() -> int32[ {  //~ ERROR FS-PARSE-0010 @23
    return 0;
}

// Missing parameter type
fn badParamType(!) -> void {  //~ ERROR FS-PARSE-0010 @17
}

// Unclosed '[' in array parameter type
fn badParamArray(xs: int32[) -> void {  //~ ERROR FS-PARSE-0010 @28
}

// Missing parameter name
fn missingParamName(: int32) -> void {  //~ ERROR FS-PARSE-0010 @21
}

// Missing ')' after parameters
fn unclosedParams(x: int32 {  //~ ERROR FS-PARSE-0010 @28
}

// Missing '{' to start body
fn noBody(x: int32) -> void
y: int32 = 1;  //~ ERROR FS-PARSE-0010 @1
